--- a/package.json
+++ b/package.json
@@ -13,9 +13,13 @@
     "test": "tape test/*.js",
     "lint": "standard"
   },
-  "keywords": [
-  ],
-  "dependencies": {},
+  "keywords": [],
+  "dependencies": {
+    "discovery-swarm": "^6.0.0",
+    "node-record-lpcm16": "^0.3.1",
+    "random-port": "^0.1.0",
+    "speaker": "^0.4.2"
+  },
   "devDependencies": {
     "tape": "~4.6.2",
     "standard": "~10.0.0"
