--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "discovery-swarm": "^6.0.0",
     "node-record-lpcm16": "^0.3.1",
     "random-port": "^0.1.0",
-    "speaker": "^0.4.2"
+    "speaker": "^0.4.2",
+    "through2": "^3.0.1"
   },
   "devDependencies": {
     "tape": "~4.6.2",
