--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "main": "index.js",
   "keywords": [],
   "dependencies": {
+    "dat-swarm-defaults": "^1.0.2",
     "discovery-swarm": "^6.0.0",
     "node-record-lpcm16": "^0.3.1",
     "random-port": "^0.1.0",
